--- a/faq.html
+++ b/faq.html
@@ -493,7 +493,7 @@ z-index: 11;
 <font color="#aa8f8f"> | </font><a href="#purity"><font color="#d8b6b6">purity & innocence</font></a>
 <font color="#aa8f8f"> | </font><a href="#fashion"><font color="#d8b6b6">my fashion style</font></a>
 <font color="#aa8f8f"> | </font><a href="#inspiration"><font color="#d8b6b6">about inspired accounts</font></a>
-<font color="#aa8f8f"> | </font><a href="#messages"><font color="#d8b6b6">messages & requests</font></a>
+<font color="#aa8f8f"> | </font><a href="#messages"><font color="#d8b6b6">about messages & requests</font></a>
 <font color="#aa8f8f"> | </font><a href="#internet"><font color="#d8b6b6">my internet past</font></a>
 <font color="#aa8f8f"> | </font><a href="#numbers"><font color="#d8b6b6">about numbers and social media</font></a>
 <font color="#aa8f8f"> | </font><a href="#snippets"><font color="#d8b6b6">my web code snippets</font></a>
@@ -682,7 +682,7 @@ also : we must accept that other people can find success by doing similar things
 </font>
 
 <a name="messages" id="messages"></a><br>
-<sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　how frequently can i respond to messages and requests ?</font><br><br><br>
+<sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　how do i respond to messages and requests ?</font><br><br><br>
 <font color="#d8b9af">　( august . 28 . 2021 )</font>
 <br><br>
 <font color="#B1A69E">
