--- a/faq.html
+++ b/faq.html
@@ -704,37 +704,36 @@ i also can't completely ignore the doubts of people who are not so kind with the
 <br><br>
 <font color="#B1A69E">
 what did i do on the internet before starting the projects and this website ?<br>
-some of you have known me for quite some time because i played many online games, especially dress up games and ragnarok. i'm not going to get into this because i already have the gaming session, where you can check it out !<br>
-i started with the internet very early, i was only 7 years old ( 2004 ). my mom always saw everything i did, so it was safe, don't worry LOL<br>
-i used to play flash games, and i had msn, and a blog. everyone had blogs or personal websites on the internet, where they customized and posted all sorts of things. i was a kid so i was not good with those things, but i liked to post gifs with cute animals, lots of glitter and beautiful images that i found on other blogs and google.<br>
-i didn't have social media at the time because i was very young and my mom wouldn't let me. i enjoyed visiting lots of websites with graphics and materials, beautiful blogs, and playing online games. my first online game was ragnarok, and my second, club penguin, if you wanna know.<br>
-i only used the internet for 2 hours a day in the morning and i used this time to decorate my blog and play with my friends. it was so much fun and i have great memories of that time !<br>
-i could have a social media ( orkut ) with 9 y/o, and i continued just posting cute graphics with lots of glitter, because it's just so adorable !<br>
-i also knew several forums at that time, and began to communicate with people all over the world. my english was obviously horrible, but i used the google translator to help me. i never posted any real information or photo because i was taught that this is dangerous.<br>
-i made several blogs, which were improving the quality of content and the layouts were becoming cuter. in 2006, i made the first layout that i really was proud of !<br>
-<br>
-over time, the internet has been changing .. the blogs became unpopular, forums too, msn died, orkut died.. very sad, right ? ;;<br>
-i then looked for substitutes for the things i liked : i tried using facebook to replace orkut, but no one else cared about the glittery cute things and i was disappointed.<br>
-i started using tumblr, which was well customizable and could fill the void that blogs left behind. it worked, even if it took a long time to find an aesthetic that would make me really happy, so i did several blogs until i got to my recent one ( it was during this time that i created the name middlepot ).<br>
-my recent one, was done together with a friend of mine, who also made with me the not bad fb page, which should have the same aesthetics. but she and i had very different opinions of what we wanted to do and she'd post things that i didn't like, both on the tumblr and on the page ... it became a mess, and we ended up giving up doing it together. i'd like to talk more about it in another post, because it's a tricky subject ; ;<br>
-anyway, i deleted her posts from tumblr and facebook, and then i got to my actual project : safety & comfort !<br>
-i no longer use fb and decided to continue the project by keeping just the necessary accounts, separately :<br>
-tumblr is my place to post images in original quality ; youtube is my place to make playlists ; twitter is my place to post ascii art ; instagram is my place to post interactive content .<br>
-i don't use any social media in a very personal way because these are just for sharing content to inspire and make people smile with positivity !<br>
-it was hard deciding what i should do, i'm used to the more open and customizable format the old internet had... tumblr is the place where i most adapted, but i still don't use it to post personal content.<br>
-to replace the forums, i found other places on the internet where i could communicate with various types of people, where i always remain anonymous as usual.<br>
-to replace msn, which was the platform i always used to talk to my family and close friends, i decided to use line. line in my opinion resembles quite a lot of things, besides having super cute stickers and themes !!<br>
-i also decided to try out discord because of friends, who use it a lot.. it reminds me of the oldschool group chats, so i like it.. !<br>
-now line is my fav chatting app,, while discord is my fav for group chat, specifically.<br>
-<br>
-but in spite of having some social media accs, other nice places on the internet & the cute line... i was still missing something, my little corner on internet, to be able to make layouts exactly as i imaginate & post every kind of things i want : a personal website !!<br>
-so i did it, and here i am <sub>💝</sub><br>
-the 7 y/o me would be really proud of everything i'm doing right now. this website is really my favorite place on internet !<br>
-it's all i wanted, here i can put together all the projects i do and all the content i like.<br>
-sadly, personal websites are not that popular nowadays, so if i want to really help people in some way i need to keep some social media accounts for reaching them ..<br>
-<br>
-<br>
-i hope this answers a few things about how i got here !
+some of you have known me for quite some time because i played many online games, especially dress up games and ragnarok. on the /gaming page you can check out my current characters !<br>
+i started accessing the internet very early, i was only 7 years old ( 2004 ) . my mom always saw everything i did, so it was safe, don't worry !<br>
+i used to play lots of flash games, i used msn, and i had a blog. by that time everyone had blogs / personal websites, where they customized and posted all sorts of things. it was such a delight to explore the internet ..<br>
+well, as a small child, i wasn't good with making content or coding, but i liked to post anime girls and cat gifs with lots of glitter, and other beautiful images that i found in random websites.<br>
+i didn't have any social media account at the time because i was very young, my mom wouldn't let me ( and i'm very thankful for that ) so i enjoyed all my time ( 2 hours a day every morning ) visiting sozai websites with cute graphics and materials, blogs, and playing online games. my first online game was ragnarok, and my second one, club penguin <font color="#d3a5a5" style="font-size:11px;">♡</font><br>
+it was so much fun .. i have many precious memories of that time, so i try to fill my routine with these same activities to this day !<br><br>
+
+i could finally have a social media account ( orkut ) once i turned 10, and i used it mainly for posting, again, cute glitterly graphics, and sharing my online memories with friends. orkut was pretty similar to myspace, it was quite customizable and the content was very "restricted" to what you specifically interacted with, which i find really nice.<br>
+i also accessed many forums & messageboards at that time, and began to communicate with people all over the world. my english was obviously horrible, but i had the google translator to help me. i never posted any real information or photo of myself because i was taught that this is dangerous.<br>
+as time went by i deleted my blog, made new ones, little by little the quality of content was improving, and the layouts were becoming cuter and more intricated. by 2006 i made the first layout that i really was proud of, but it was still obviously very simple. i remade old projects from time to time ( and still do ) .<br><br>
+
+past 2012 the internet started changing drastically .. the blogs became unpopular, forums too, msn died, orkut died. very sad, right ? it was indeed a very depressing time in my life ;;<br>
+i then started looking desperately for substitutes for the things i liked : firstly i tried using facebook to replace orkut, but there you couldn't post gifs or swfs, you couldn't customize your profile or messages ...... internet was falling apart, and no one one seemed to care !?<br>
+i decided to keep trying anyway, and made my own facebook pages for posting "soft aesthetic photos" , something i was slowly getting into. after some time, i had a taste of how shallow and superficial social media was becoming. needless to say, i was left deeply disappointed, and gave up. everything got deleted.<br>
+simultaneously, i started using tumblr. it was well customizable and could partially fill the void that oldschool blogs left behind. it took a long time for me to find an aesthetic that would make me really happy, so i made multiple blogs until i got to my recent one.<br>
+to replace msn, which was the platform i always used to talk to my family and close friends, i decided to use line. in my opinion, line resembles msn quite a bit, besides having super cute stickers and themes. i really like it !!<br>
+i also decided to try out discord, but i only entered my friends' small servers. the big ones are quite scary and uncomfortable ..<br>
+it was during that time ( 2013~2015 ) that i created the name middlepot, and started planning the poofties project !!<br>
+i slowly found what i wanted to do, and which feelings i wanted to spread : safety & comfort <font color="#d3a5a5" style="font-size:11px;">♡</font><br><br>
+
+after a long journey of trying things out, i am keeping these respective accounts :<br>
+tumblr for posting photos ; youtube for making playlists ; twitter for posting ascii art ; instagram for posting interactive self care content .<br>
+i never use social media in a personal way because these are just for sharing content. i make content to inspire and make people smile !<br>
+it was really hard deciding what to do, as i'm used to the more niche and highly customizable format the old internet had ..<br>
+one day, i will have my very own platform : a cute & safe place where i can post stuff as i want and have lots of fun interactive things !<br><br>
+
+using platforms made by big companies feels awful, and it never fills the void.. i always knew i needed my little corner on the internet : a personal website !!<br>
+so by 2016 i started coding it, and here i am today <sub>💝</sub><br>
+the child me would be really proud of everything i'm doing right now .. this website is really my favorite place on the internet !<br>
+here i can put together all the things i'm doing, and all the content i like. here i am safe. here i am free to be purely myself.<br>
 <br><br><br><br><br><br>
 </font>
 
