--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ z-index: 3;
 <div style="line-height: 5px"><br></div>
 <div style="line-height: 10px"><center><sub><sub><img src="https://i.imgur.com/2Ntnpfr.gif"></sub></sub> ‌ <font color="#cfabab" style="font-size:10px;">updates</font> ‌ <sub><sub><img src="https://i.imgur.com/fy4LEng.gif"></sub></sub></center>
 <br></div>
-　　04.27 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> update on: <a href="/myfluffylife" style="text-decoration: none;"><font color="#DFB7B7">/myfluffylife</font></a><br>
+　　04.27 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> update on: <a href="/myfluffylife" style="text-decoration: none;"><font color="#DFB7B7">/myfluffylife</font></a><br>
 　　04.26 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> entry on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
 　　04.23 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> links on: <a href="/recommended" style="text-decoration: none;"><font color="#DFB7B7">/recommended</font></a><br>
 　　04.17 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> event on: <a href="/myfluffylife" style="text-decoration: none;"><font color="#DFB7B7">/myfluffylife</font></a><br>
