--- a/faq.html
+++ b/faq.html
@@ -842,7 +842,7 @@ i don't want to be part of this, and help those ugly platforms grow stronger. th
 it is a big and very complicated project, but i believe in my dreams.
 i somehow made an online game, and that's because bubu, my loved ones, you fluffies, are giving me all the support in the world !! <font color="#d3a5a5" style="font-size:11px;">♡</font>
 so i must work hard for us all, to have our very deserved comfort spaces, because it is never too much to ask for !
-
+<a name="applysnippets" id="applysnippets"></a>
 
 okay, but.. how to apply these web code snippets ?
 there are multiple ways of inserting javascript into a website, but i will tell you how i personally prefer to do it :
