--- a/recommended.html
+++ b/recommended.html
@@ -481,7 +481,11 @@ z-index: 3;
 <center>
 <img src="https://i.imgur.com/WoYT1el.png"><br><br><br>
 
-　<a href="https://datura.neocities.org" target="_blank"><img src="https://i.imgur.com/ZEr5wPY.png"></a>
+　<a href="http://makipooh.chu.jp/apupu/top.html" target="_blank"><img src="https://i.imgur.com/E703NhN.gif"></a>
+　<a href="http://cotton.chu.jp" target="_blank"><img src="https://i.imgur.com/enSS5tE.gif"></a>
+　<a href="https://bisuko.neocities.org/home.html" target="_blank"><img src="https://i.imgur.com/t6VOzBj.png"></a>　　
+
+<br><br><a href="https://datura.neocities.org" target="_blank"><img src="https://i.imgur.com/ZEr5wPY.png"></a>
 　<a href="https://ruber-rosis.blogspot.com" target="_blank"><img src="https://i.imgur.com/rq0YRg3.gif"></a>
 　<a href="https://cinni.net/directory/" target="_blank"><img src="https://i.imgur.com/5BxDDhb.png"></a>　　‌‌
 
