--- a/blog.html
+++ b/blog.html
@@ -2062,7 +2062,7 @@ function resetPlayer() {
 </script>
 	<div id='media-player'>
 		<video id='media-video' controls poster="https://myfluffy.life/img/trailerpreview.jpg" onclick="this.play()">
-			<source src='https://myfluffylife-public.us-southeast-1.linodeobjects.com/final.mp4' type='video/mp4'>
+			<source src='https://buckets.api.middlepot.com/v1/file/myfluffylife-public/final.mp4' type='video/mp4'>
 		</video>
 		<div id='media-controls'>
 			<progress id='progress-bar' min='0' max='100' value='0'/>0% played</progress>
