--- a/links.html
+++ b/links.html
@@ -492,7 +492,7 @@ z-index: 3;
 <sub><sub><img width="auto" height="20px" src="https://i.imgur.com/vwcukYQ.png"></sub></sub><font color="#b09698">
  ‌ my web pages :</font><br>
 <div style="border: none; width: 105px; height: 190px; margin-top:6px; overflow-x:hidden; overflow: auto; overflow: scroll; line-height:14px; padding-right:7px; padding-left:5px;">
-<a id="ooo" href="https://2006.pooftie.me" target="_blank" >soft tribute</a>
+<a id="ooo" href="https://2006.pooftie.me" target="_blank" >a soft tribute</a>
 <br>
 <a id="ooo" href="https://emoji.pooftie.me" target="_blank" >my emoji pack</a>
 <br>
@@ -500,9 +500,9 @@ z-index: 3;
 <br>
 <a id="ooo" href="https://utf8.pooftie.me" target="_blank" >unicode fonts</a>
 <br>
-<a id="ooo" href="https://care.pooftie.me" target="_blank" >self care archive</a>
+<a id="ooo" href="https://1997.pooftie.me" target="_blank" >win97 simulation</a>
 <br>
-<a id="ooo" href="https://world.pooftie.me" target="_blank" >my little world</a>
+<a id="ooo" href="https://dream.pooftie.me" target="_blank" >dream directory</a>
 <br>
 <a id="ooo" href="https://ascii.pooftie.me" target="_blank" >ascii art materials</a>
 <br>
@@ -510,13 +510,13 @@ z-index: 3;
 <br>
 <a id="ooo" href="https://tea.pooftie.me" target="_blank" >weather for tea ?</a>
 <br>
-<a id="ooo" href="https://1997.pooftie.me" target="_blank" >win95 desktop</a>
+<a id="ooo" href="https://ch.pooftie.me" target="_blank" >pufchan simulation</a>
 <br>
-<a id="ooo" href="https://ch.pooftie.me" target="_blank" >soft ib simulation</a>
-<br>
-<a id="ooo" href="https://file.pooftie.me" target="_blank" >my files archive</a>
+<a id="ooo" href="https://care.pooftie.me" target="_blank" >self care archive</a>
 <br>
 <a id="ooo" href="https://test.pooftie.me" target="_blank" >html test</a>
+<br>
+<a id="ooo" href="https://file.pooftie.me" target="_blank" >my files archive</a>
 <br>
 <a id="ooo" href="https://day.pooftie.me" target="_blank" >my routine</a>
 <br>
