--- a/gaming.html
+++ b/gaming.html
@@ -484,7 +484,7 @@ z-index: 3;
 <br>
 
 <font family = "Verdana" style="font-size:8px;"><font color="#a8958d">
-<center>this is my progress diary for online games i'm playing currently</center>
+<center>this is my progress diary for games i'm playing currently</center>
 </font></font>
 </center>
 <br><br>
@@ -732,7 +732,7 @@ cutest baby there is.<br>
 　　　invitation codes : 2 left<br><br><br>
 
 <div style="position:relative; left:50px; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border-style: solid; border-width: 20px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 300px; height: 275px; line-height:10px;">
-<iframe id="frame" src="/pupe/15" style="position:absolute; z-index:8; height:430px; width:540px; border:none; overflow:hidden; top:5px; left:5px;" scrolling="no"></iframe>
+<iframe id="frame" src="/pupe/16" style="position:absolute; z-index:8; height:430px; width:540px; border:none; overflow:hidden; top:5px; left:5px;" scrolling="no"></iframe>
 </div>
 </font>
 
@@ -762,7 +762,7 @@ cutest baby there is.<br>
 
 <font color="#a37c81" style="position:absolute; left:115px; top:3px; font-size:8px;">
 <sub><img width="auto" height="20px" src="https://i.imgur.com/Se1Diyp.png"></sub> ‌<b>fluff</b>#3583<font style="line-height:23px;"><br></font>
-　<font color="#b89196">level :</font> 54<br>
+　<font color="#b89196">level :</font> 55<br>
 　<font color="#b89196">fav mode :</font> normal<br>
 　<font color="#b89196">fav title :</font> snowdrop<br>
 　<font color="#b89196" style="line-height:5px;">fav orb : <sub><sub><sub><img width="auto" height="30px" src="https://i.imgur.com/9sEBAGc.png"></sub></sub></sub><br>
