--- a/pupe/16.html
+++ b/pupe/16.html
@@ -210,46 +210,49 @@ menuuuuuuuuuuuuuuu
 <sub><sub><sub><img width="auto" height="20px" src="https://file.pooftie.me/pupe/pf.png"></sub></sub></sub> ‌ <b>puf</b><br><br>
 </font>
 
-<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf15.png">
+<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf16.png">
 
 <div style="position:absolute; top:5px; left:135px; overflow:hidden; border-style: solid; border-width: 10px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px; padding-top:1px;">
 <font color="#a37c81" style="font-size:8px;">
-<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf15+.png"></sub></sub></sub></sub> ‌ <b>heartwarming</b><br></font>
+<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf16+.png"></sub></sub></sub></sub> ‌ <b>caring girl</b><br></font>
 <div style="border: none; width: 110px; height: 145px; margin-top:4px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:0px;">
 ‌<font color="#b0878d" style="font-size:7px;">
-• Heart effect/11BJ<br>
-‌‌ • Cookie bag/bg13BJ<br>
+‌ • Lace apron/wh12I<br>
+‌ • White Flowers/wh12IJ<br>
 ‌ • Mascara/001<br>
-‌ • Milky chocolate Wall Paper/13BJ<br>
+‌ • Wood planter/wh13DJ<br>
+‌ • Flower wagon/wh13DJ<br>
+‌ • Rose effect/12KJ<br>
 ‌ • Hair glitter/12KJ<br>
-‌ • Present chocolate/pk13BJ<br>
 ‌ • Decolletage beaty cream/11KJ<br>
-‌ • Lace flower socks/11H<br>
-‌ • Dolly long05/12DJ<br>
-‌ • Collar/wh12G<br>
-‌ • Heart Engagement Ring/13F<br>
-‌ • Valentine board/wh13BJ<br>
-‌ • Antique flooring/11IJ<br>
-‌ • Rose rich effect/11KJ<br>
-‌ • Bridal inner for dress/13F<br>
-‌ • Sweet heart effect/11KJ<br>
-‌ • Soft heart effect/12BJ<br>
+‌ • Gingham check ribbon birdcage/br11EJ<br>
+‌ • Glitteringly mat effect/11EJ<br>
+‌ • Music note lace hairband/br13BJ<br>
+‌ • Green carpet/12AJ<br>
+‌ • X'mas lingerie/wh09L<br>
+‌ • Hand made room background/12FJ<br>
+‌ • Manicure/pk12KJ<br>
+‌ • Tiered Knee Skirt/wh13G<br>
+‌ • Herb/br13D<br>
+‌ • Side lace boots/br12B<br>
+‌ • Mini pedicure/pk11KJ<br>
+‌ • Simple ball earrings/wh09L<br>
+‌ • Brilliantlyglitteringly effect/11BJ<br>
+‌ • Holiday Socks/wh12LJ<br>
+‌ • Flower Country Girl Dress/br12KJ<br>
+‌ • Cute pirate02/12G<br>
+‌ • Antique lace parasola/12F<br>
 ‌ • Color contact lens 009<br>
-‌ • Cookie dress/pk13B<br>
-‌ • Tea cup mini hat/pk13BJ<br>
 ‌ • Eye glitter/11KJ<br>
-‌ • Make up desk/wh13BJ<br>
-‌ • Lace half pants/wh12CJ<br>
-‌ • Girl's shoes/12GJ<br>
+‌ • Tiara marriage ring/13F<br>
 ‌ • Blush 007<br>
 </font>
 </div>
 </div>
 
-<font color="#a37c81" style="position:absolute; left:145px; top: 220px; font-size:8px; line-height:12px;">
-<a href="https://file.pooftie.me/pupe/heartwarming.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
-<a href="/pupe/14"><font color="#b08087">← previous outfit</font></a><br>
-<a href="/pupe/16"><font color="#b08087">next outfit →</font></a>
+<font color="#a37c81" style="position:absolute; left:145px; top: 225px; font-size:8px; line-height:12px;">
+<a href="https://file.pooftie.me/pupe/caring%20girl.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
+<a href="/pupe/15"><font color="#b08087">← previous outfit</font></a>
 </font>
 
 </body>
