--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@ background-color: #f9f0ed;
 -webkit-border-radius: 0ex;
 border: 1px dotted #e2d5d0;
 }
-#linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
+#linkbjinho { text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px dotted #ccb1b1; }
 #linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
 #linkzinhoo { padding-bottom: 2px; border-bottom:1px dotted #e8c1c5; }</style>
 
