--- a/blog.html
+++ b/blog.html
@@ -66,7 +66,7 @@ background-color: #f9f0ed;
 -webkit-border-radius: 0ex;
 border: 1px dotted #e2d5d0;
 }
-#linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
+#linkbjinho { text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px dotted #ccb1b1; }
 #linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
 #linkzinhoo { padding-bottom: 2px; border-bottom:1px dotted #e8c1c5; }</style>
 
@@ -970,11 +970,11 @@ so i must work hard for us all, to have our very deserved comfort spaces, becaus
 okay, but.. how to apply these web code snippets ? ( i will put this into my /faq page )
 there are multiple ways of inserting javascript into a website, but i will tell you how i personally prefer to do it :
 
-<sub>📍</sub> on my <b>pc</b>, i use the opera browser, and there we can use chrome extensions, so i use the "inject code" one. i tested multiple things, including inserting the code directly on the "inspect element" settings, but that extension is the most reliable way to insert the codes automatically to websites so far ( and it's very easy to use too ) .
+<sub>📍</sub> on my <b>pc</b>, i use the opera browser, and there we can use chrome extensions, so i use the "<a style="text-decoration: none;" href="https://chrome.google.com/webstore/detail/inject-code/jpbbdgndcngomphbmplabjginoihkdph" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">inject code</font></a>" one. i tested multiple things, including inserting the code directly on the "inspect element" settings, but that extension is the most reliable way to insert the codes automatically to websites so far ( and it's very easy to use too ) .
 
-<sub>📍</sub> on my <b>android</b> phone, i use the kiwi browser, and there we can use chrome extensions, so i also use the "inject code" one, and it works perfectly just as on pc. keep in mind that the youtube code only works on the "desktop view" of the site, but the other codes work okay on the mobile versions too. my tip is : use your phone horizontally when on youtube, and you will simply get used to it.
+<sub>📍</sub> on my <b>android</b> phone, i use the kiwi browser, and there we can use chrome extensions, so i also use the "<a style="text-decoration: none;" href="https://chrome.google.com/webstore/detail/inject-code/jpbbdgndcngomphbmplabjginoihkdph" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">inject code</font></a>" one, and it works perfectly just as on pc. keep in mind that the youtube code only works on the "desktop view" of the site, but the other codes work okay on the mobile versions too. my tip is : use your phone horizontally when on youtube, and you will simply get used to it.
 
-<sub>📍</sub> on my <b>ipad</b>, i use the safari browser, and i use the "snippets" app for inserting the codes manually on each website, as i enter them. it works pretty similarly to the "shortcuts" app ( it was freezing my ipad because the codes are too big, so i just downloaded the "snippets" as an alternative ) . you have to click on the "share" symbol on safari and then on the "inject snippet" button so you can insert the code on each website, after opening them. sadly, i found no automatic way to do that on ios .. so my tip is : have a clean profile saved on bookmarks so you won't risk seeing "unwanted" content once entering websites, before applying your code !
+<sub>📍</sub> on my <b>ipad</b>, i use the safari browser, and i use the "<a style="text-decoration: none;" href="https://apps.apple.com/us/app/safari-snippets/id1126048257" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">snippets</font></a>" app for inserting the codes manually on each website, as i enter them. it works pretty similarly to the "shortcuts" app ( it was freezing my ipad because the codes are too big, so i just downloaded the "snippets" as an alternative ) . you have to click on the "share" symbol on safari and then on the "inject snippet" button so you can insert the code on each website, after opening them. sadly, i found no automatic way to do that on ios .. so my tip is : have a clean profile saved on bookmarks so you won't risk seeing "unwanted" content once entering websites, before applying your code !
 
 
 now, to finish this post, i'll share with you some outfit projects that i have finished recently.
@@ -2665,7 +2665,7 @@ i did a lot of research and after a few hours i finally found a version of the o
 </pre>
 <br>
 
-<center><sub>✂️</sub> <a href="https://file.pooftie.me/r/flashplayer32.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">flashplayer32 .rar</font></a>　</center>
+<center><sub>✂️</sub> <a style="text-decoration: none;" href="https://file.pooftie.me/r/flashplayer32.rar" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">flashplayer32 .rar</font></a>　</center>
 <br>
 
 </font></font></font>
