--- a/blog.html
+++ b/blog.html
@@ -917,8 +917,7 @@ i will keep my web code snippets updated whenever needed, and you can always che
 keep in mind that these codes were made by me, thinking on my own needs, and i am sharing it with you fluffies exactly as i use them <sub>🗝</sub>
 you are free to use them as you personally like, and modify according to your preferences. if you have some practice with css it should be enough for changing colors, images, or removing some stuff i did. feel free to experiment around !!
 
-i wish i could be more of an active help to others, at least when it comes to my own accounts, but sadly i have no much of an option .. i can only sometimes choose to hide a few numbers, but usually i can't.
-i have to insert javascript into websites for achieving that simple goal by myself, and so i am sharing them with you, in hopes to help in some way.
+i wish i could be more of an active help to others, and if i have to insert javascript into websites for achieving a more comfortable user experience, i am sharing them with you, in hopes to help in some way.
 
 the reality is that we have no control over our personal information on these platforms ( yes i do consider numbers something very personal, as it is clearly used for judging our "success" and "relevance" ) .
 on instagram, a few interaction numbers are hidden by standard ( at least for me ) but not the following count, while on youtube you can hide the subscriptions, but not any other numbers.
@@ -931,15 +930,16 @@ i don't think those platforms care, at all, about people's mental health. hiding
 that's why i will work in solutions for this issue, by making my own safe spaces, that i can share with you fluffies <font color="#d3a5a5" style="font-size:11px;">♡</font>
 for now, i think those scripts are being a big help for me, and i hope they can help you as well .. at least a little bit
 
-but of course : inserting codes to hide some things, besides being a very useful tool, it's only a temporary solution for the real problem .. better saying, i am coping, not actually improving platforms for everyone. <sub>💻</sub>
-sadly, deep down, i know that people are still able to see all the numbers, and will judge me based on them just as much as the next person.
-that, itself, is a bit unmotivating.. i also can't run away from all the bothering posts that get suggested for me, weird dms from strangers, or avoid platforms to stop my posts from reaching more people because it's not "trending".
-
-nonetheless, keeping myself away from looking to numbers all the time is absolutely refreshing, and is doing wonders to my mental health <sub>💐</sub>
-sometimes i would feel so sad about social media, that i would just avoid it for the longest time, but i must always come back because i need those platforms to reach people & grow my community ( at least for now, hopefully not in the future )
-
 using those scripts + cutifying the pages certainly work very well, not only for coping, but for healing as well.
 i might never be able to feel 100% comfortable using social platforms, but i feel at least .. 40% more comfortable, and that is a lot, i must say !
+
+but of course : inserting codes to hide some things, besides being a very useful tool, it's only a temporary solution for the real problem .. better saying, i am coping, not actually improving platforms for everyone. <sub>💻</sub>
+sadly, deep down, i know that people are still able to see all the numbers, and will judge others based on them just as much as the next person.
+that, itself, is a bit unmotivating.. i also can't run away from all the bothering posts that get suggested for me, weird dms from strangers, or avoid platforms to stop my posts from reaching more people because it's not "trending".
+those are extra issues that come with posting on social media actively, so i am looking forward to avoid that as a whole, by only opening these sites sporadically for checking specific content that i like, then going away.
+
+nonetheless, keeping myself away from looking to numbers all the time is absolutely refreshing, and is doing wonders to my mental health <sub>💐</sub>
+sometimes i would feel so sad about social media that i would just avoid it for the longest time, but at least for now i need to actively post on these platforms to reach people & grow my community ( hopefully not in the future, as i work on new solutions )
 
 explaining in more detail : as an inactive user, just looking around and visiting people's accounts, i would say that the experience is heavily improved by the removal of mentioned problematic aspects of platform websites.
 i feel okay, specially on tumblr & youtube, because their recommendations are highly advertised by content you explicitly interacted with + you can easily avoid the advertised posts with paid subscriptions ; which makes the experience of using them more enjoyable than other platforms !
@@ -949,7 +949,7 @@ all posts has to be painfully adapted to each platform particularities ( which r
 yes, i can't possibly avoid all the issues unless i stop using these platforms as a whole, but i can avoid myself from getting upset about many things on a daily basis - i have to make an effort to think about the issues that numbers cause, instead of being reminded of them all the time.
 this is good enough for now, i'm proud of my efforts for the time being !!
 
-i will keep trying my best to create content for now, even with all limitations, because i need these social platforms for reaching people and keeping contact with the <a id="linkbjinho" href="https://poofties.club" target="_blank">poofties</a> community. i know i don't post a lot, and i apologize for that .. it is very hard for me, but i know you fluffies are looking forward to the content i post on my accounts. i want to inspire & comfort you all, so i try to keep going, as i can. <sub>🦋</sub>
+i try my best to keep going and working on my projects, for being able to be helpful for the <a id="linkbjinho" href="https://poofties.club" target="_blank">poofties</a> community. i know i don't post a lot, and i apologize for that .. it is very hard for me, but i know you fluffies are looking forward to the content i post on my accounts. i want to inspire & comfort you all, so i try to keep going, as i can. <sub>🦋</sub>
 once i can release my puf café project, finish working on the puf bot, i hope to finally free myself and be able to post content in a safe place where i can do things as i like <font color="#d3a5a5" style="font-size:11px;">♡</font>
 ( i will share more detailed information about those projects in future posts ! )
 
@@ -958,8 +958,8 @@ i noticed just how much i used to compare myself to other people and getting ran
 it is completely different avoiding getting informed about important things that are happening, and just avoiding unnecessary stress and ridiculous drama. please allow yourself to be free from that !
 
 using "not only cuter but also improved" platforms this past month has made my experience with them a lot less heavy. now i open my feed and i don't feel disgusted, yay !
-do i feel happy though ? sometimes, yes, i like checking on my friends, people who i admire, as well as cute & comforting content, which inspires me a lot and keeps me motivated. i also get kind messages that make me smile so much <sub>💘</sub>
-but as i mentioned above, deep down i still know there is lots of ugly stuff going on .. i just often don't know exactly what it is, or how ugly it is, giving my efforts into avoiding it.
+do i feel happy though ? sometimes, yes, i like checking cute & comforting content, which inspires me a lot and keeps me motivated <sub>💘</sub>
+but as i mentioned above, posting features are very limited and i feel unsafe. there are lots of ugly stuff going on .. i just often don't know exactly what it is, or how ugly it is, giving my efforts into avoiding it.
 
 i don't want to be part of this, and help those ugly platforms grow stronger. that's why i will stick to the plan, and never give up !!
 it is a big and very complicated project, but i believe in my dreams.
